fix: micro process flow outline overflow and optimizations [ci visual]

--- a/src/styles/micro-process-flow.scss
+++ b/src/styles/micro-process-flow.scss
@@ -3,18 +3,28 @@
 
 $block: #{$fd-namespace}-micro-process-flow;
 
-$fd-micro-process-flow-item-width: 2.75rem;
+:root {
+  --fdMicro_Process_Flow_Item_Background: var(--sapNeutralBackground);
+  --fdMicro_Process_Flow_Item_Border_Color: var(--sapNeutralBorderColor);
+  --fdMicro_Process_Flow_Item_Hover_Background: var(--fdMicro_Process_Flow_Item_Background);
+  --fdMicro_Process_Flow_Item_Hover_Border_Color: var(--fdMicro_Process_Flow_Item_Border_Color);
+  --fdMicro_Process_Flow_Item_Active_Background: var(--sapHighlightColor);
+  --fdMicro_Process_Flow_Item_Active_Border_Color: var(--sapHighlightColor);
+  --fdMicro_Process_Flow_Item_Width: 2.75rem;
+  --fdMicro_Process_Flow_Item_Min_Width: 1.875rem;
+  --fdMicro_Process_Flow_Compact_Item_Width: 2rem;
+  --fdMicro_Process_Flow_Compact_Item_Min_Width: 1.375rem;
+  --fdMicro_Process_Flow_Connector_Width: 1.125rem;
+  --fdMicro_Process_Flow_Compact_Connector_Width: 0.625rem;
+  --fdMicro_Process_Flow_Icon_Font_Size: var(--sapFontLargeSize);
+  --fdMicro_Process_Flow_Visible_items: 8;
+  --fdMicro_Process_Flow_Max_Container_Width: calc(var(--fdMicro_Process_Flow_Item_Width) * (var(--fdMicro_Process_Flow_Visible_items) + 1) + 0.0625rem);
+  --fdMicro_Process_Flow_Compact_Max_Container_Width: calc(var(--fdMicro_Process_Flow_Compact_Item_Width) * (var(--fdMicro_Process_Flow_Visible_items) + 1) + 0.0625rem);
+}
+
 $fd-micro-process-flow-item-padding: 0.1875rem;
-$fd-micro-process-flow-item-min-width: 1.875rem;
-$fd-micro-process-flow-item-compact-width: 2rem;
 $fd-micro-process-flow-outline-offset: 0.0625rem;
-$fd-micro-process-flow-item-connector-width: 1.125rem;
-$fd-micro-process-flow-item-compact-min-width: 1.375rem;
-$fd-micro-process-flow-item-connector-compact-width: 0.625rem;
 $fd-micro-process-flow-intermediary-indicator-width: 0.25rem;
-$fd-micro-process-flow-max-container-visible-items: 8;
-$fd-micro-process-flow-max-container-compact-width: $fd-micro-process-flow-item-compact-width * ($fd-micro-process-flow-max-container-visible-items + 1) + $fd-micro-process-flow-outline-offset;
-$fd-micro-process-flow-max-container-width: $fd-micro-process-flow-item-width * ($fd-micro-process-flow-max-container-visible-items + 1) + $fd-micro-process-flow-outline-offset;
 
 $fd-micro-process-flow-semantic-colors: (
   positive: (
@@ -107,24 +117,13 @@ $fd-micro-process-flow-semantic-colors: (
   @each $state,
     $background in $fd-micro-process-flow-semantic-colors {
     &--#{$state} {
-      .#{$block}__icon-container {
-        border-color: map-get($background, default);
-        background-color: map-get($background, default);
-
-        .#{$block}__icon {
-          color: var(--fdMicro_Process_Flow_Icon_Color);
-        }
-
-        @include fd-hover() {
-          border-color: map-get($background, hover);
-          background-color: map-get($background, hover);
-        }
-
-        @include fd-active() {
-          border-color: var(--sapHighlightColor);
-          background-color: var(--sapHighlightColor);
-        }
-      }
+      --fdMicro_Process_Flow_Item_Background: #{map-get($background, default)};
+      --fdMicro_Process_Flow_Item_Border_Color: #{map-get($background, default)};
+      --fdMicro_Process_Flow_Item_Hover_Background: #{map-get($background, hover)};
+      --fdMicro_Process_Flow_Item_Hover_Border_Color: #{map-get($background, hover)};
+      --fdMicro_Process_Flow_Item_Active_Background: var(--sapHighlightColor);
+      --fdMicro_Process_Flow_Item_Active_Border_Color: var(--sapHighlightColor);
+      --fdMicro_Process_Flow_Icon_Color: var(--fdMicro_Process_Flow_Active_Icon_Color);
     }
   }
 }
@@ -133,7 +132,7 @@ $fd-micro-process-flow-semantic-colors: (
   @include fd-reset();
   @include fd-flex();
 
-  max-width: $fd-micro-process-flow-max-container-width;
+  max-width: var(--fdMicro_Process_Flow_Max_Container_Width);
 
   &--independent-steps {
     .#{$block}__connector:before {
@@ -205,7 +204,7 @@ $fd-micro-process-flow-semantic-colors: (
     @include fd-set-padding-left($fd-micro-process-flow-item-padding);
 
     position: relative;
-    margin: 0.1625rem 0;
+    margin: calc(var(--sapContent_FocusWidth) + var(--sapContent_FocusWidth)) 0;
     justify-content: flex-start;
 
     .#{$fd-namespace}-status-indicator {
@@ -224,23 +223,25 @@ $fd-micro-process-flow-semantic-colors: (
     @include fd-flex-center();
 
     border-radius: 50%;
-    background-color: var(--sapNeutralBackground);
-    min-width: $fd-micro-process-flow-item-min-width;
-    min-height: $fd-micro-process-flow-item-min-width;
-    border: 0.0625rem solid var(--sapNeutralBorderColor);
+    background-color: var(--fdMicro_Process_Flow_Item_Background);
+    min-width: var(--fdMicro_Process_Flow_Item_Min_Width);
+    min-height: var(--fdMicro_Process_Flow_Item_Min_Width);
+    border: 0.0625rem solid var(--fdMicro_Process_Flow_Item_Border_Color);
 
     .#{$block}__icon {
-      font-size: var(--sapFontLargeSize);
-      color: var(--sapButton_Neutral_Background);
+      font-size: var(--fdMicro_Process_Flow_Icon_Font_Size);
+      color: var(--fdMicro_Process_Flow_Icon_Color);
+    }
+
+    @include fd-hover() {
+      --fdMicro_Process_Flow_Item_Background: var(--fdMicro_Process_Flow_Item_Hover_Background);
+      --fdMicro_Process_Flow_Item_Border_Color: var(--fdMicro_Process_Flow_Item_Hover_Border_Color);
     }
 
     @include fd-active() {
-      border-color: var(--sapHighlightColor);
-      background-color: var(--sapHighlightColor);
-
-      .#{$block}__icon {
-        color: var(--fdMicro_Process_Flow_Icon_Color);
-      }
+      --fdMicro_Process_Flow_Item_Background: var(--fdMicro_Process_Flow_Item_Active_Background);
+      --fdMicro_Process_Flow_Item_Border_Color: var(--fdMicro_Process_Flow_Item_Active_Border_Color);
+      --fdMicro_Process_Flow_Icon_Color: var(--fdMicro_Process_Flow_Active_Icon_Color);
     }
   }
 
@@ -249,8 +250,8 @@ $fd-micro-process-flow-semantic-colors: (
     @include fd-flex-justify-content-start();
 
     width: 100%;
-    min-width: $fd-micro-process-flow-item-min-width;
-    min-height: $fd-micro-process-flow-item-min-width;
+    min-width: var(--fdMicro_Process_Flow_Item_Min_Width);
+    min-height: var(--fdMicro_Process_Flow_Item_Min_Width);
   }
 
   &__connector {
@@ -261,7 +262,7 @@ $fd-micro-process-flow-semantic-colors: (
     flex-grow: 1;
     height: 100%;
     position: relative;
-    min-width: $fd-micro-process-flow-item-connector-width;
+    min-width: var(--fdMicro_Process_Flow_Connector_Width);
 
     &::before {
       content: "";
@@ -295,24 +296,10 @@ $fd-micro-process-flow-semantic-colors: (
   }
 
   &--compact {
-    max-width: $fd-micro-process-flow-max-container-compact-width;
-
-    .#{$block}__content {
-      min-width: $fd-micro-process-flow-item-compact-min-width;
-      min-height: $fd-micro-process-flow-item-compact-min-width;
-    }
-
-    .#{$block}__icon-container {
-      min-width: $fd-micro-process-flow-item-compact-min-width;
-      min-height: $fd-micro-process-flow-item-compact-min-width;
-
-      .#{$block}__icon {
-        font-size: var(--sapFontSmallSize);
-      }
-    }
-
-    .#{$block}__connector {
-      width: $fd-micro-process-flow-item-connector-compact-width;
-    }
+    --fdMicro_Process_Flow_Item_Min_Width: var(--fdMicro_Process_Flow_Compact_Item_Min_Width);
+    --fdMicro_Process_Flow_Connector_Width: var(--fdMicro_Process_Flow_Compact_Connector_Width);
+    --fdMicro_Process_Flow_Icon_Font_Size: var(--sapFontSmallSize);
+    --fdMicro_Process_Flow_Item_Width: var(--fdMicro_Process_Flow_Compact_Item_Width);
+    --fdMicro_Process_Flow_Max_Container_Width: var(--fdMicro_Process_Flow_Compact_Max_Container_Width);
   }
 }
